# src/dtos/missionDto.js
@@ -1,0 +1,6 @@
+export const addMissionResponseDTO = (mission) => {
+    return {
+        reward: mission[0].reward,
+        content: mission[0].content,
+    }
+}
