# src/routes/missionRoute.js
@@ -1,0 +1,8 @@
+import express from "express"
+import asyncHandler from "express-async-handler"
+
+import { missionCreate } from "../controllers/missionController.js"
+
+export const missionRoute = express.Router()
+
+missionRoute.post("/", asyncHandler(missionCreate))
